--- a/package.json
+++ b/package.json
@@ -6,19 +6,16 @@
         "dev": "vite"
     },
     "devDependencies": {
-        "@tailwindcss/forms": "^0.5.2",
-        "autoprefixer": "^10.4.2",
-        "axios": "^1.7.4",
+        "@tailwindcss/vite": "^4.1.3",
+        "axios": "^1.8.2",
         "concurrently": "^9.0.1",
-        "laravel-echo": "^1.16.1",
-        "laravel-vite-plugin": "^1.0",
-        "postcss": "^8.4.31",
-        "pusher-js": "^8.4.0-rc2",
-        "tailwindcss": "^3.1.0",
-        "vite": "^5.0"
+        "daisyui": "^5.0.19",
+        "laravel-vite-plugin": "^1.2.0",
+        "tailwindcss": "^4.1.3",
+        "vite": "^6.2.4"
     },
     "dependencies": {
         "d3": "^7.9.0",
-        "preline": "^2.5.1"
+        "flatpickr": "^4.6.13"
     }
 }
